# anki_gen

./: .gitignore  CONFIGURATION.md  Cargo.toml  README.md  config.example.json  config.example.yaml  example_batch.txt  niraprint.md
.claude/: findings.md  progress.md  settings.local.json  task_plan.md
src/: anki_client.rs  cli.rs  config.rs  engine.rs  errors.rs  main.rs  model_client.rs  prompt_builder.rs  storage.rs  types.rs
