[package]
name = "anki_gen"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strsim = "0.11.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
